--- a/Ant-Man/Ant-Man.html
+++ b/Ant-Man/Ant-Man.html
@@ -2,22 +2,45 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Ant-Man</title>
 </head>
 
 <body>
-<h2>Ant-Man</h2>
-<img src="Ant-Man.jpg"> <br>
-Series: on-going, 5 issues<br>
-Illustrator: Mark Brooks<br>
-Writer: Nick Spensor<br>
-Publisher: 2015 Marvel<br>
-Note: Released with 7 variant covers to annoy, confuse, and increase sales.
+<img src="Ant-ManMovie1.jpg"> <br>
+Movie in 2015 Disney. 5 issues in 2015 Marvel<br>
+Illustrator: Mark Brooks, Writer: Nick Spensor
 <p>
-Scott Lang has never exactly been the world's best super hero. Heck, most people don't even think he's been the best ANT-MAN. The last guy invented Ultron and joined the Masters of Evil, so that's saying something. But when the SUPERIOR IRON MAN calls with a once-in-a-lifetime opportunity, Scott's going to get a chance to turn it all around and be the hero he's always dreamed of being. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Ant-ManMovie1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ant-Man1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ant-Man2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ant-Man3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ant-Man4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ant-Man5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ant-Man6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ant-Man7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ant-Man8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ant-Man9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ant-Man10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-Sure he's been to prison! Sure he's been through a messy divorce! Sure he's been, um... dead. But this time is different! This time nothing is gonna stop the astonishing ANT-MAN!
+Ant-Man is the name of several fictional superheroes appearing in books published by Marvel Comics. Created by Stan Lee, Larry Lieber and Jack Kirby, Ant-Man's first appearance was in <a href="../TalesToAstonish/TalesToAstonish.html">Tales to Astonish</a> #35 (September 1962). The persona was originally the brilliant scientist Hank Pym's superhero alias after inventing a substance that can change size, but Scott Lang and Eric O'Grady also took on the mantle after the original changed his superhero identity to various other aliases, such as Giant-Man, Goliath, and Yellowjacket.
+</p><p>
+The original Ant-Man was Biophysicist and Security Operations Center expert Dr. Henry 'Hank' Pym; who decided to become a superhero after the death of his first wife Maria Trovaya, who had been a political dissident in Hungary. Falling in love with him and believing that his American citizenship would protect her, Hank and Maria traveled to Hungary shortly after their marriage to start their new life together. Unfortunately they were confronted by corrupt agents of the secret police. Hank was knocked unconscious and Maria was murdered. Pym was greatly distraught by his wife's death, and decided to do whatever he could in the future to battle injustice. After discovering a chemical substance, which he called Pym Particles, that would allow the user to alter his size, he armed himself with a helmet that could control ants. After that, Pym would shrink down to the size of an insect to become the mystery-solving Ant-Man, solving crimes and stopping criminals.
+</p><p>
+2015 #1: Scott Lang has never exactly been the world's best super hero. Heck, most people don't even think he's been the best ANT-MAN. The last guy invented Ultron and joined the Masters of Evil, so that's saying something. But when the SUPERIOR IRON MAN calls with a once-in-a-lifetime opportunity, Scott's going to get a chance to turn it all around and be the hero he's always dreamed of being. Sure he's been to prison! Sure he's been through a messy divorce! Sure he's been, um... dead. But this time is different! This time nothing is gonna stop the astonishing ANT-MAN!
 </p>
 </body>
 </html>
