--- a/ApacheKid/ApacheKid.html
+++ b/ApacheKid/ApacheKid.html
@@ -8,15 +8,12 @@
 
 <body>
 <img src="ApacheKid.jpg"> <br>
-Series: 19 issues 1950 - 1956<br>
-Illustrator: John Buscema, Werner Roth, Joe Maneely (covers) <br>
-Writer: John Buscema<br>
-Publisher: Atlas (Marvel)<br>
+19 issues 1950-1956 Atlas (Marvel)<br>
+Covers: Joe Maneely, Writer: John Buscema<br>
 <p>
-About: Numbering continues from Reno Browne, Hollywood's Greatest Cowgirl (Marvel, 1950 series) #52, and continues with Western Gunfighters (Marvel, 1956 series) #20.
+Numbering continues from Reno Browne, Hollywood's Greatest Cowgirl (Marvel, 1950 series) #52, and continues with Western Gunfighters (Marvel, 1956 series) #20.
 </p><p>
 The Apache Kid (Alan Krandal) is a fictional Old West character in the Marvel Comics universe, mostly seen in stories from Marvel's 1950s precursor, Atlas Comics. This character was named after, but is unrelated to, the real-life Native American man known as The Apache Kid (Haskay-bay-nay-natyl).
-
 </p>
 </body>
 </html>
