--- a/ApacheSkies/ApacheSkies.html
+++ b/ApacheSkies/ApacheSkies.html
@@ -2,22 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Apache Skies</title>
 </head>
 
 <body>
-<h2>Apache Skies</h2>
-<img src="ApacheSkies1.jpg">
-<img src="ApacheSkies2.jpg"> <br>
-<img src="ApacheSkies3.jpg">
-<img src="ApacheSkies4.jpg"> <br>
-Series: 4 issue mini series, 1 TPB collection<br>
-Illustrator: Leonardo Manco<br>
-Writer: John Ostrander<br>
-Publisher: 2002 Max (Marvel)<br>
+<img src="ApacheSkies1.jpg"><br>
+4 issues, 1 TPB collection 2002 Max (Marvel)<br>
+Illustrator: Leonardo Manco, Writer: John Ostrander
 <p>
-The series was a sequel to 2000s Blaze of Glory. After the death of the Apache Kid, the Rawhide Kid joins forces with the new Apache Kid to find the killer.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ApacheSkies1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApacheSkies2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApacheSkies3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApacheSkies4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+The series was a sequel to 2000s <a href="../BlazeOfGlory/BlazeOfGlory.html">Blaze of Glory</a>. After the death of the Apache Kid, the Rawhide Kid joins forces with the new Apache Kid to find the killer.
 </p>
 </body>
 </html>
