--- a/BlazeOfGlory/BlazeOfGlory.html
+++ b/BlazeOfGlory/BlazeOfGlory.html
@@ -2,19 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Blaze Of Glory</title>
 </head>
 
 <body>
-<h2>Blaze Of Glory</h2>
-<img src="BlazeOfGlory.jpg"> <br>
-Series: 4 issue mini series<br>
-Illustrator: Leonardo Manco<br>
-Writer: John Ostrander<br>
-Publisher: 2000 Marvel<br>
+<img src="BlazeOfGlory1.jpg"> <br>
+4 issues 2000 Marvel<br>
+Illustrator: Leonardo Manco, Writer: John Ostrander
 <p>
-John Woo meets Unforgiven as your favorite Marvel Western heroes round up for one last adventure!<br>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BlazeOfGlory1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlazeOfGlory2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlazeOfGlory3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlazeOfGlory4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
+John Woo meets Unforgiven as your favorite Marvel Western heroes round up for one last adventure! 
+</p><p>
 It's the sunset days of the Wild West, and former Gunhawk Reno Jones is raising a family in a small town in Montana. The exploits of himself and the other gun slingers are now relegated to pulp novels. 
 </p><p>
 But tranquillity is shattered when Reno's town is targeted by a ruthless land baron who's willing to use any means necessary, including the lawless, hooded Night Riders, to wipe out the town and make way for a new copper mining operation. 
@@ -26,6 +43,8 @@ Two-Gun Kid has retired his masked identity and is back at his legal practice. R
 Worst of all, the man once known as the Outlaw Kid has begun a slow deterioration into schizophrenia...believing his true identity and masked identity are two separate people! 
 </p><p>
 Can this ragtag collection of former allies pull together and stop the sacrifice of an innocent town for the sake of corporate greed? Especially when the land baron has also hired the infamous bounty hunter called Gunhawk? And what about the Ghost Rider? He's dead? 
+</p><p>
+The story continues in 2002 with <a href="../ApacheSkies/ApacheSkies.html">Apache Skies</a>
 </p>
 </body>
 </html>
