--- a/AntmanWasp/AntmanWasp.html
+++ b/AntmanWasp/AntmanWasp.html
@@ -2,17 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Antman &amp; Wasp</title>
 </head>
 
 <body>
-<img src="AntmanWasp.jpg"> <br>
-3 issues 2011, 5 issues 2018 Marvel<br>
+<img src="AntmanWaspMovie.jpg"> <br>
+3 issues 2011, 5 issues 2018 Marvel, 1 Movie 2018 Disney<br>
 <p>
-Two of Marvel's smallest heroes must join forces and get over one BIG elephant-in-the-room! Eric O'Grady once STOLE the Ant-Man suit from Hank Pym. But now, Eric is the only one who knows about a secret AIM plot to steal Pym's greatest invention.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AntmanWaspMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntmanWasp1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntmanWasp2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntmanWasp3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntmanWasp4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntmanWasp5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntmanWasp6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntmanWasp7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntmanWasp8.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-Can the two men get along long enough to save the soul of the former GOLIATH, Bill Foster? Tim Seeley, creator of 'Hack/Slash' brings us the big story of the two smallest Avengers.
+Ant-Man and the Wasp is a 2018 American superhero film based on the Marvel Comics characters Scott Lang / Ant-Man and Hope van Dyne / Wasp. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is the sequel to 2015's Ant-Man and the twentieth film in the Marvel Cinematic Universe (MCU). 
+</p><p>
+The film is directed by Peyton Reed and written by the writing teams of Chris McKenna and Erik Sommers, and Paul Rudd, Andrew Barrer and Gabriel Ferrari. It stars Rudd as Lang and Evangeline Lilly as Van Dyne, alongside Michael Peña, Walton Goggins, Bobby Cannavale, Judy Greer, Tip "T.I." Harris, David Dastmalchian, Hannah John-Kamen, Abby Ryder Fortson, Randall Park, Michelle Pfeiffer, Laurence Fishburne, and Michael Douglas. In Ant-Man and the Wasp, the titular pair work with Hank Pym to retrieve Janet van Dyne from the quantum realm.
+</p><p>
+2011 Series: Two of Marvel's smallest heroes must join forces and get over one BIG elephant-in-the-room! Eric O'Grady once STOLE the Ant-Man suit from Hank Pym. But now, Eric is the only one who knows about a secret AIM plot to steal Pym's greatest invention. Can the two men get along long enough to save the soul of the former GOLIATH, Bill Foster? Tim Seeley, creator of 'Hack/Slash' brings us the big story of the two smallest Avengers.
 </p>
 </body>
 </html>
