--- a/ApocalypseNerd/ApocalypseNerd.html
+++ b/ApocalypseNerd/ApocalypseNerd.html
@@ -2,18 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Apocalypse Nerd</title>
 </head>
 
 <body>
-<h2>Apocalypse Nerd</h2>
 <img src="ApocalypseNerd.jpg"> <br>
-Series: 6 issue mini series, 1 collection<br>
-Illustrator: Peter Bagge<br>
-Writer: Peter Bagge<br>
-Publisher: 2005 Dark Horse<br>
+6 issues, 1 collection 2005 Dark Horse<br>
+Created by Peter Bagge
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ApocalypseNerd.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApocalypseNerd1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApocalypseNerd2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApocalypseNerd3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApocalypseNerd4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApocalypseNerd5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApocalypseNerd6.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 The story revolves around two men, Perry and Gordo, attempting to survive in the wilds of the Pacific Northwest after Seattle is destroyed in a North Korean nuclear attack. Perry is a somewhat introverted computer programmer whilst his longtime friend Gordo works in various "self-employed" fields and is also a drug dealer. 
 </p><p>
 The story is a masculine character study as the two evolve and adapt to the changes in the post-apocalyptic world. Gordo becomes more amoralistic while Perry learns survival skills. Both have unique personality traits which help them adapt.
