--- a/Order/Order.html
+++ b/Order/Order.html
@@ -2,17 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>the Order</title>
 </head>
 
 <body>
 <img src="Order1.jpg" title="the Order"><br>
-Series: 6 issues 2002<br>
-Publisher: Marvel<br>
-Written by <br>
-Illustrations by <br>
+6 issues 2002 Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Order1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Order2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Order3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Order4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Order5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Order6.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 The Order is the name of two fictional superhero teams appearing in American comic books published by Marvel Comics. The first team was a brief offshoot of the team Defenders, and the second is part of an initiative to place a superhero team in each state of the United States.
 </p><p>
 The original incarnation of The Order starred in the six-issue limited series The Order (April-Sept. 2002) intending to conquer the world in order to protect it. The team consisted of the original Defenders: Doctor Strange, The Incredible Hulk, Namor the Sub-Mariner and Silver Surfer.
