--- a/Appleseed/appleseed.html
+++ b/Appleseed/appleseed.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Appleseed: Databook</h2>
 <img src="appleseed.jpg"> <br>
-Series: one-shot TPB collection<br>
-Illustrator: Shirow Masamune, Hitoshi Hayami<br>
-Writer: Shirow Masamune<br>
-Publisher: 1995 Dark Horse<br>
+1 Graphic Novel 1999 by Dark Horse<br>
+Created by: Shirow Masamune, Hitoshi Hayami
 <p>
 Collected in this 128-page volume is the two-issue series Appleseed Databook, containing detailed descriptions of the people, places, machines, and organizations that populate this fascinating world, plus a previously unreleased twenty-five-page story featuring all of those people, places, machines, and organizations! Appleseed Databook is an absolute must for established fans of the Appleseed saga!
 </p>
