--- a/AranaTheHeartOfTheSpider/AranaTheHeartOfTheSpider.html
+++ b/AranaTheHeartOfTheSpider/AranaTheHeartOfTheSpider.html
@@ -2,17 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Arana The Heart Of The Spider</title>
 </head>
 
 <body>
-<h2>Arana The Heart Of The Spider</h2>
 <img src="AranaTheHeartOfTheSpider.jpg"> <br>
-Series: on-going, 12 issues<br>
-Illustrator: Roger Cruz, Mark Brooks (cover)<br>
-Writer: Fiona Avery<br>
-Publisher: 2005-2006 Marvel<br>
+12 issues 2005-2006 Marvel<br>
+Illustrator: Roger Cruz, Mark Brooks (cover), Writer: Fiona Avery
 <p>
 The secret is out! The new super hero people can't stop talking about is named... ARANA! That's pronounced ah-rahn-ya, for all you gringos!
 </p><p>
