--- a/ArchEnemies/ArchEnemies.html
+++ b/ArchEnemies/ArchEnemies.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>ArchEnemies</h2>
 <img src="ArchEnemies.jpg"> <br>
-Series: mini series, 1 collection<br>
-Illustrator: Yvel Guichet, Joe Rubinstein<br>
-Writer: Drew Melbourne<br>
-Publisher: 2007 Dark Horse<br>
+1 Graphic Novel 2007 Dark Horse<br>
+Illustrator: Yvel Guichet, Joe Rubinstein, Writer: Drew Melbourne
 <p>
 Thick-headed Ethan has no idea that his roommate, Vincent, is the megalomaniacal Underlord. Self-absorbed Vincent has no clue that Ethan is the stellar-powered Star Fighter. As hero and villain, they're mortal enemies, but as roommates, they REALLY hate each other. Join comicdom's ultimate odd couple as they fight to keep their secrets secret and learn to live together in peace. 
 </p><p>
