--- a/Archangel/Archangel.html
+++ b/Archangel/Archangel.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Archangel</h2>
 <img src="Archangel.jpg"> <br>
-Series: one-shot<br>
-Illustrator: Leonardo Manco<br>
-Writer: Peter Milligan<br>
-Publisher: 1996 Marvel<br>
+1 issues 1996 Marvel<br>
+Illustrator: Leonardo Manco, Writer: Peter Milligan
 <p>
 Warren Worthington III: X-Man, hero, and philanthropist. But after having his mind altered by Apocalypse, Angel became Archangel, shadow of death. Witness the fallen Angel struggle with his descent into darkness, as he tries to maintain what is left of his humanity.
 </p>
