--- a/Area10/Area10.html
+++ b/Area10/Area10.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Area 10</h2>
 <img src="Area10.jpg"> <br>
-Series: one-shot Graphic Novel<br>
-Illustrator: Chris Samnee<br>
-Writer: Christos Gage<br>
-Publisher: 2010 Vertigo (DC)<br>
+1 Graphic Novel 2010 Vertigo (DC)<br>
+Illustrator: Chris Samnee, Writer: Christos Gage
 <p>
 In New York City, a killer known as "Henry The Eighth" leaves a trail of decapitated corpses, keeping the severed heads to use for unknown purposes.
 </p><p>
