--- a/ArizonaKid/ArizonaKid.html
+++ b/ArizonaKid/ArizonaKid.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>The Arizona Kid</h2>
 <img src="ArizonaKid.jpg"> <br>
-Series: on-going, 6 issues<br>
-Illustrator: Russ Heath, Stan Goldberg<br>
-Writer: unknown <br>
-Publisher: 1950 Atlas (Marvel)<br>
+6 issues 1950 Atlas (Marvel)<br>
+Illustrator: Russ Heath, Stan Goldberg
 <p>
 The Bushwcker Strikes!: Davy Laramee, 17 years old, rescues Capt. Macklin from outlaws and earns a place in the Texas Rangers. When fellow Ranger Bart Trager goes bad, only the Arizona Kid can stop him.
 </p><p>
