--- a/kb.html
+++ b/kb.html
@@ -1593,8 +1593,8 @@ Creative Knowledgebase<br>
 <tr>
 <td>Army of Darkness</td>
 <td>1992</td>
-<td>Dark Horse</td>
-<td><a href="ArmyOfDarkness/ArmyOfDarkness.html">Details</a></td>
+<td>Universal</td>
+<td><a href="EvilDead3/EvilDead3.html">Details</a></td>
 </tr>
 
 <tr>
