--- a/ApocalyptiGirl/ApocalyptiGirl.html
+++ b/ApocalyptiGirl/ApocalyptiGirl.html
@@ -8,11 +8,9 @@
 
 <body>
 <h2>ApocalyptiGirl: An Aria for the End Times</h2>
-<img src="ApocalyptiGirl.jpg"> <br>
-Series: Graphic Novel 2015<br>
-Illustrator: Andrew MacLean<br>
-Writer: Andrew MacLean<br>
-Publisher: Dark Horse<br>
+<img src="ApocalyptiGirl.jpg"><br>
+1 Graphic Novel 2015 Dark Horse<br>
+Creator: Andrew MacLean
 <p>
 Alone at the end of the world, Aria is a woman with a mission! As she traipses through an overgrown city with a cat named Jelly Beans, Aria is on a fruitless search for an ancient relic with immeasurable power. But when a creepy savage sets her on a path to complete her quest, shell face death in the hopes of claiming her prize.
 </p>
