--- a/EvilDead3/EvilDead3.html
+++ b/EvilDead3/EvilDead3.html
@@ -2,17 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Evil Dead 3: Army of Darkness</title>
 </head>
 
 <body>
-<h2>Evil Dead 3: Army of Darkness</h2>
-<img src="ArmyOfDarkness.jpg"> 
-<img src="ArmyOfDarknessComic.jpg"> <br>
-Series: Movie, 3 issue mini-series 1992<br>
-Publisher: Universal Pictures, Dark Horse<br>
+<img src="ArmyOfDarknessMovie.jpg"><br>
+Movie 1992 Universal, 3 issue mini-series 1992 Dark Horse, 27 issues Dynamite Entertainment 2007-2010<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarknessMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarkness1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarkness2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarkness3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarkness4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarkness5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarkness6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarkness7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarkness8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarkness9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarkness10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyOfDarkness11.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Army of Darkness is a 1992 American horror comedy film directed and co-written by Sam Raimi, co-produced by Robert Tapert and Bruce Campbell and co-written by Ivan Raimi. It stars Campbell and Embeth Davidtz. It is the third installment in the Evil Dead franchise, and continuing from Evil Dead II, Ash Williams (Campbell) is trapped in the Middle Ages and battles the undead in his quest to return to the present.
 </p><p>
 The film was produced as part of a production deal with Universal Studios after the financial success of Darkman. Filming took place in California in 1991. The makeup and creature effects for the film were handled by two different companies: Tony Gardner and his company Alterian, Inc. were responsible for the Ash &amp; Sheila makeup effects, while Kurtzman, Nicotero &amp; Berger EFX Group was credited for the remaining special makeup effects characters.
