--- a/ArmyAtLove/ArmyAtLove.html
+++ b/ArmyAtLove/ArmyAtLove.html
@@ -2,19 +2,50 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Army @ Love</title>
 </head>
 
 <body>
-<h2>Army @ Love</h2>
-<img src="ArmyAtLove.jpg"> <br>
-Series: on-going, 12 issues<br>
-Illustrator: Rick Veitch, Gary Erskine<br>
-Writer: Rick Veitch<br>
-Publisher: 2007 - 2009 Vertigo (DC)<br>
+<img src="ArmyAtLove1.jpg"> <br>
+12 issues, 2 TPB collections, 2007-2009 vertigo (DC)<br>
+Illustrator: Rick Veitch, Gary Erskine, Writer: Rick Veitch
 <p>
-The unit includes both men and women, a great deal of the action following the amorous adventures of various members. The contrast between the surreal combat in Afbaghistan and the comfortable lives of the rear echelon and the people the Guardsmen have left behind is also a recurring theme.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmyAtLove12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+The story follows the adventures of a unit of New Jersey National Guard in "Afbaghistan", a fictional Middle Eastern country. As is often the case with Vertigo Comics, the title is designed to evoke memories of a long-running defunct DC title, in this case, Our Army at War, which, subsequent to its retitling to Sgt. Rock in 1977, was followed by a one-shot titled simply Army at War in 1978.
+</p><p>
+The unit includes both men and women, a great deal of the action following the amorous adventures of various members. The contrast between the surreal combat in Afbagistan and the comfortable lives of the rear echelon and the people the Guardsmen have left behind is also a recurring theme.
+</p><p>
+The series is being collected as trade paperbacks:<ul>
+<li>The Hot Zone Club (collects #1–5)
+<li>Generation Pwned (collects #6–12)
+</ul>
 </p>
+
 </body>
 </html>
