--- a/Arrgh/Arrgh.html
+++ b/Arrgh/Arrgh.html
@@ -2,18 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
-<title>Arrgh</title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>Arrgh!</title>
 </head>
 
 <body>
-<h2>Arrgh!</h2>
-<img src="Arrgh.jpg"> <br>
-Series: on-going, 5 issues<br>
-Illustrator: Marie Severin, Tom Sutton<br>
-Writer: Russ Jones<br>
-Publisher: 1974-1975 Marvel<br>
+
+<img src="Arrgh1.jpg"> <br>
+5 issues 1974-1975 Marvel<br>
+Illustrator: Marie Severin, Tom Sutton, Writer: Russ Jones
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Arrgh1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Arrgh2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Arrgh3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Arrgh4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Arrgh5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Crazy-funny humor tales that will make you go Arrgh! Includes parody of the classic Universal monsters, it was a horror/mystery mag with a humorous twist, a love-letter to the classic EC Comics in the guise of the love-child of Tales from the Crypt and Mad. 
 </p>
 </body>
