--- a/Akaneiro/akaneiro.html
+++ b/Akaneiro/akaneiro.html
@@ -2,19 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Akaneiro</title>
 </head>
 
 <body>
-<img src="Akaneiro01.jpg">
-<img src="Akaneiro02.jpg">
-<img src="Akaneiro03.jpg"> <br>
-3 issues 2013 by Dark Horse<br>
-Illustrator: Vasilis Lolos<br>
-Writer: Justin Aclin<br>
+<img src="Akaneiro1.jpg"> <br>
+3 issue video game adaptation by Dark Horse<br>
+Illustrator: Spicy Horse Games, Writer: American McGee
 <p>
-Akaneiro is the Japanese word for the color of dye from the Madder plant, a dark shade of red. The comic series is based on the game by American McGee’s Spicy Horse Games, which reenvisions Red Riding Hood set in the wondrous world of Japanese folklore.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Akaneiro1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akaneiro2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akaneiro3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akaneiro4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akaneiro5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akaneiro6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akaneiro7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akaneiro8.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Akaneiro is the reimagining of Red Riding Hood as a monster hunter in mythological Japan. Akaneiro is the Japanese word for the color of dye from the Madder plant, a dark shade of red. The comic series is based on the game by American McGee’s Spicy Horse Games, which reenvisions Red Riding Hood set in the wondrous world of Japanese folklore.
 </p><p>
 Issue #1: Kani is a young woman torn between two cultures on an epic adventure battling devious yokai for the fate of her world.
 </p><p>
