--- a/Asterix/Asterix.html
+++ b/Asterix/Asterix.html
@@ -19,6 +19,7 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="Asterix.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Asterix01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Asterix02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Asterix03.jpg"></div>
