--- a/Asterix/Asterix.html
+++ b/Asterix/Asterix.html
@@ -26,6 +26,10 @@
 <div class="mySlides" style="text-align: center;"><img src="Asterix04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Asterix05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Asterix06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Asterix07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Asterix08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Asterix09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Asterix10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
