--- a/AstonishingAntMan/AstonishingAntMan.html
+++ b/AstonishingAntMan/AstonishingAntMan.html
@@ -2,18 +2,45 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Astonishing Ant-Man</title>
 </head>
 
 <body>
-<h2>Astonishing Ant-Man</h2>
-<img src="AstonishingAntMan.jpg"> <br>
-Series: on-going<br>
-Illustrator: Ramon Rosanas, Mark Brooks (cover)<br>
-Writer: Nick Spencer<br>
-Publisher: 2015 Marvel<br>
+<img src="AstonishingAntMan1.jpg"> <br>
+13 issues 2015-2016 Marvel<br>
+Illustrator: Ramon Rosanas, Mark Brooks (cover), Writer: Nick Spencer
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingAntMan15.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 Scott Lang was a down-on-his-luck, divorced ex-con, until he stole renowned scientist and super hero Hank Pym's size-altering technology in the hopes of saving his daughter's life. Through that act of doing wrong for the right reasons, Scott inadvertently learned how to be a hero himself. 
 </p><p>
 With Pym's blessing and his daughter Cassie at his side, he became... The Astonishing Ant-Man! But when a curveball upends Scott's life, will he continue to be a hero, or will he return to his former life of crime?
