--- a/AstonishingSpidermanWolverine/AstonishingSpidermanWolverine.html
+++ b/AstonishingSpidermanWolverine/AstonishingSpidermanWolverine.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Astonishing Spiderman &amp; Wolverine</h2>
 <img src="AstonishingSpidermanWolverine.jpg"> <br>
-Series: 6 issue limited series<br>
-Illustrator: Adam Kubert<br>
-Writer: Jason Aaron<br>
-Publisher: 2010 Marvel<br>
+6 issues 2010 Marvel<br>
+Illustrator: Adam Kubert,  Writer: Jason Aaron
 <p>
 Spiderman and Wolverine face such awful beings as The Czar, Big Murder and Doom the Living Planet! But who is the major Marvel villain pulling the strings? And can Spidey and Wolvie refrain from killing one another long enough to find out? PLUS: a pin-up gallery featuring art by Nicholas Bradshaw, Humberto Ramos, Mark Brooks, Alex Maleev, Mico Suayan and Niko Henrichon.
 </p>
