--- a/AstonishingThor/AstonishingThor.html
+++ b/AstonishingThor/AstonishingThor.html
@@ -2,20 +2,37 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Astonishing Thor</title>
 </head>
 
 <body>
-<h2>Astonishing Thor</h2>
-<img src="AstonishingThor.jpg"> <br>
-Series: on-going<br>
-Illustrator: Esad Ribic, Mike Choi<br>
-Writer: Rob Rodi<br>
-Publisher: 2011 Marvel<br>
+<img src="AstonishingThor1.jpg"> <br>
+5 issues 2011 Marvel<br>
+Illustrator: Esad Ribic, Mike Choi, Writer: Rob Rodi
 <p>
-Waves are but water, wind but air. And though lightning be fire... IT MUST ANSWER THUNDER'S CALL. The God of Thunder finds himself battling a mysterious surge of natural catastrophes, hurricanes, tidal waves, earthquakes. At first, the Son of Odin suspects Zephyr, immortal mistress of the winds, but soon he finds that the climactic upheaval must be attributed to a much larger force,
-EGO, THE LIVING PLANET!
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AstonishingThor1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingThor2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingThor3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingThor4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingThor5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Waves are but water, wind but air. And though lightning be fire... it must answer thunder's call. The God of Thunder finds himself battling a mysterious surge of natural catastrophes, hurricanes, tidal waves, earthquakes. At first, the Son of Odin suspects Zephyr, immortal mistress of the winds, but soon he finds that the climactic upheaval must be attributed to a much larger force.
+</p><p>
+Thor traces the cause to Ego, the Living Planet, out of his orbit and rocketing across the solar system on an unstoppable quest to rescue his long-lost brother, held captive by the cosmic entity the Collector. There will be no happy reunion at the end of his journey, for when Ego and Alterego meet, only one can survive...and earth surely will be destroyed! Only Thor has power enough to avert the pending apocalypse, but to do so, he'll have to rely on the help of a wind goddess with questionable motives...and a stormy history with the God of Thunder.
 </p>
 </body>
 </html>
