--- a/Atlas/Atlas.html
+++ b/Atlas/Atlas.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Atlas</h2>
 <img src="Atlas.jpg"> <br>
-Series: 4 issue mini series<br>
-Illustrator: Bruce Zick<br>
-Writer: Bruce Zick<br>
-Publisher: 1994 Dark Horse<br>
+4 issues 1994 Dark Horse<br>
+Writer and illustrator: Bruce Zick
 <p>
 Issue #1: Bruce Zick resurrects the legend of Atlas and pits the mighty titan against the wrath of the gods.
 </p><p>
