--- a/Atom/Atom.html
+++ b/Atom/Atom.html
@@ -8,12 +8,9 @@
 </head>
 
 <body>
-<img src="Atom.jpg"> 
-<img src="Atom032.jpg"> <br>
-Series: 38 issues 1962 - 1968<br>
-Illustrator: Gil Kane<br>
-Writer: Gardner Fox<br>
-Publisher: DC<br>
+<img src="Atom01.jpg"><br>
+38 issues 1962-1968 DC<br>
+Illustrator: Gil Kane, Writer: Gardner Fox
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -23,8 +20,20 @@ Publisher: DC<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="Atom.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Atom032.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom12.jpg"></div>
+
+<div class="mySlides" style="text-align: center;"><img src="Atom32.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
