--- a/Atom/Atom.html
+++ b/Atom/Atom.html
@@ -32,7 +32,13 @@ Illustrator: Gil Kane, Writer: Gardner Fox
 <div class="mySlides" style="text-align: center;"><img src="Atom10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Atom11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Atom12.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="Atom13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Atom19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Atom32.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
