--- a/AtomicAge/AtomicAge.html
+++ b/AtomicAge/AtomicAge.html
@@ -2,18 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Atomic Age</title>
 </head>
 
 <body>
-<h2>Atomic Age</h2>
-<img src="AtomicAge.jpg"> <br>
-Series: 4 issue mini series<br>
-Illustrator: Mike Okamoto, Kevin Nowlan, Al Williamson<br>
-Writer: Frank Lovece<br>
-Publisher: 1995 Marvel<br>
+<img src="AtomicAge1.jpg"> <br>
+4 issues 1995 Marvel<br>
+Illustrators: Mike Okamoto, Kevin Nowlan, Al Williamson, Writer: Frank Lovece
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AtomicAge1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AtomicAge2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AtomicAge3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AtomicAge4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 Set during the 1950s, an alien humanoid arrives on a US Air Force base located on a fictional island in the South Pacific; He is called the "Nimbus," as he appeared from the clouds and returns to the clouds, and is from the artificial planetoid "Helix".
 </p><p>
 He doest have much memory nor does he know where he is or who the inhabitants of Earth are, he just knows he has to kill, via his electricity control powers, other alien humanoids who also arrive on Earth at the same time he does. 
