--- a/AutobioGraphix/AutobioGraphix.html
+++ b/AutobioGraphix/AutobioGraphix.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>AutobioGraphix</h2>
 <img src="AutobioGraphix.jpg"> <br>
-Series: one-shot, Trade Paper Back (TPB)<br>
-Publisher: 2003 Dark Horse<br>
+1 issue Trade Paper Back (TPB) 2003 by Dark Horse
 <p>
-By Frank Miller, Matt Wagner, Will Eisner, Sergio Aragones, Stan Sakai, and Paul Chadwick. Dedicated readers have long known that the medium of comics and graphic novels isn't all about caped superheroes. In fact, the combination of words and pictures can be the perfect vehicle for telling all kinds of stories. 
+Created by Frank Miller, Matt Wagner, Will Eisner, Sergio Aragones, Stan Sakai, and Paul Chadwick. Dedicated readers have long known that the medium of comics and graphic novels isn't all about caped superheroes. In fact, the combination of words and pictures can be the perfect vehicle for telling all kinds of stories. 
 </p><p>
 This collection of short stories illustrates, quite literally, the effectiveness of the medium for telling the most personal of stories, the autobiography, and does so by showcasing some of the first published autobiographical stories from living-legend artists, mainstream greats, and young "indie" up-and-comers. 
 </p>
